third_party/move/move-compiler-v2/tests/uninit-use-checker/use_twice_before_assign.exp

Diagnostics:
warning: Unused local variable `y`. Consider removing or prefixing with an underscore: `_y`
  ┌─ tests/uninit-use-checker/use_twice_before_assign.move:4:9
  │
4 │     let y = x + x;
  │         ^

============ initial bytecode ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: u64
  0: $t1 := +($t0, $t0)
  1: return ()
}


Diagnostics:
error: use of unassigned local `x`
  ┌─ tests/uninit-use-checker/use_twice_before_assign.move:4:13
  │
4 │     let y = x + x;
  │             ^^^^^

============ after uninitialized_use_checker: ================

[variant baseline]
fun <SELF>_0::main() {
     var $t0: u64
     var $t1: u64
     # before: { no: $t0, $t1 }, after: { no: $t0 }
  0: $t1 := +($t0, $t0)
     # before: { no: $t0 }, after: { no: $t0 }
  1: return ()
}
