third_party/move/move-compiler-v2/tests/uninit-use-checker/use_twice_before_assign.move
script {
fun main() {
    let x: u64;
    let y = x + x;
}
}
